
180319 Martin Raden :
 * IntaRNA/PredictorMfe2dHeuristic :
   * traceBack() :
     * bugfix: wrong sanity check in debug mode (thanks to Rick Gelhausen)
 * IntaRNA/Predictor :
   * updateOptima() :
     * bugfix: PredictionTracker call was not doing lastPos-handling
 * README.md : 
   + spotProb docu added
 + IntaRNA/PredictionTrackingSpotProb : tracks for a given set of interaction
   spots their probability to be covered/spanned by an interaction. furthermore,
   the probability that none of the spots of interest is covered is provided.
 + test/PredictionTrackingSpotProb
 * bin/CommandLineParsing :
   * OutputPrefixCodes :
     + OP_spotProb : for spotProb output mode
   + outSpotProbSpots : member to store the spots to be tracked (if provided)
   * --out argument :
   * validate_out() :
   * getPredictor() : 
     + handling of "spotProb" prefix for spot probability tracking

180312 Martin Raden :
 * IntaRNA/PredictorMaxProb :
 * IntaRNA/PredictorMfe :
   * updateOptima() :
     * bugfix : call of predTracker->updateOptimumCalled() was done without
       index offset information (fixes github issue #110) 
 * IntaRNA/AccessibilityVrna :
   * callbackForStorage() :
     * bugfix : copying was not heeding maximal interaction length 
       (fixes github issue #112)
 * configure :
   * bump VRNA dependency to v2.4.4 for recent SHAPE-related bugfix
 * README.md :
   + SHAPE-reactivity-related section 
 * IntaRNA/AccessibilityConstraint :
   + regexShapeMethod : regex for shapeMethod parsing
   + regexShapeConversion : regex for shapeConversion parsing
   + shapeMethod member + getter
   + shapeConversion member + getter
   * constructor :
     + argument for shapeMethod/shapeConversion
     + sanity check of shapeMethod/shapeConversion if shapeFile non-empty
   * copyconstructor :
     + copying of shape* members
   * regex : bugfix : was not correctly encoding dotbracket strings or index
     range lists
   * operator= :
     + shape members copied