@@ -46,8 +46,13 @@ OutputHandlerCsv::OutputHandlerCsv(
 
 OutputHandlerCsv::~OutputHandlerCsv()
 {
-	// force output
-	out.flush();
+#if INTARNA_MULITHREADING
+	#pragma omp critical(intarna_omp_outputStreamUpdate)
+#endif
+	{
+		// force output
+		out.flush();
+	}
 }
 
 ////////////////////////////////////////////////////////////////////////
@@ -78,53 +83,51 @@ add( const Interaction & i )
 	InteractionEnergy::EnergyContributions contr = energy.getE_contributions(i);
 
 	// ensure outputs do not intervene
-#if INTARNA_MULITHREADING
-	#pragma omp critical(intarna_omp_outputStreamUpdate)
-#endif
 	{
+		std::stringstream outTmp;
 
 		for (auto col = colOrder.begin(); col != colOrder.end(); col++) {
 			// print separator if needed
 			if (col != colOrder.begin()) {
-				out <<colSep;
+				outTmp <<colSep;
 			}
 			// print this column information
 			switch ( *col ) {
 
 			case id1:
 				// ensure no colSeps are contained
-				out <<boost::replace_all_copy(energy.getAccessibility1().getSequence().getId(), colSep, "_");
+				outTmp <<boost::replace_all_copy(energy.getAccessibility1().getSequence().getId(), colSep, "_");
 				break;
 
 			case id2:
 				// ensure no colSeps are contained
-				out <<boost::replace_all_copy(energy.getAccessibility2().getSequence().getId(), colSep, "_");
+				outTmp <<boost::replace_all_copy(energy.getAccessibility2().getSequence().getId(), colSep, "_");
 				break;
 
 			case seq1:
-				out <<energy.getAccessibility1().getSequence().asString();
+				outTmp <<energy.getAccessibility1().getSequence().asString();
 				break;
 
 			case seq2:
-				out <<energy.getAccessibility2().getAccessibilityOrigin().getSequence().asString();
+				outTmp <<energy.getAccessibility2().getAccessibilityOrigin().getSequence().asString();
 				break;
 
 			case subseq1:
-				out <<energy.getAccessibility1().getSequence().asString().substr(i1, j1-i1+1);
+				outTmp <<energy.getAccessibility1().getSequence().asString().substr(i1, j1-i1+1);
 				break;
 
 			case subseq2:
-				out <<energy.getAccessibility2().getAccessibilityOrigin().getSequence().asString().substr(j2, i2-j2+1);
+				outTmp <<energy.getAccessibility2().getAccessibilityOrigin().getSequence().asString().substr(j2, i2-j2+1);
 				break;
 
 			case subseqDP:
-				out <<energy.getAccessibility1().getSequence().asString().substr(i1, j1-i1+1)
+				outTmp <<energy.getAccessibility1().getSequence().asString().substr(i1, j1-i1+1)
 					<<'&'
 					<<energy.getAccessibility2().getAccessibilityOrigin().getSequence().asString().substr(j2, i2-j2+1);
 				break;
 
 			case subseqDB:
-				out <<(i1+1)
+				outTmp <<(i1+1)
 					<<energy.getAccessibility1().getSequence().asString().substr(i1, j1-i1+1)
 					<<'&'
 					<<(j2+1)
@@ -132,162 +135,168 @@ add( const Interaction & i )
 				break;
 
 			case start1:
-				out <<(i1+1);
+				outTmp <<(i1+1);
 				break;
 
 			case end1:
-				out <<(j1+1);
+				outTmp <<(j1+1);
 				break;
 
 			case start2:
-				out <<(j2+1);
+				outTmp <<(j2+1);
 				break;
 
 			case end2:
-				out <<(i2+1);
+				outTmp <<(i2+1);
 				break;
 
 			case hybridDP:
-				out <<Interaction::dotBracket( i );
+				outTmp <<Interaction::dotBracket( i );
 				break;
 
 			case hybridDB:
-				out <<Interaction::dotBar( i );
+				outTmp <<Interaction::dotBar( i );
 				break;
 
 			case E:
-				out <<i.energy;
+				outTmp <<i.energy;
 				break;
 
 			case ED1:
-				out <<contr.ED1;
+				outTmp <<contr.ED1;
 				break;
 
 			case ED2:
-				out <<contr.ED2;
+				outTmp <<contr.ED2;
 				break;
 
 			case Pu1:
-				out <<std::exp( - contr.ED1 / energy.getRT() );
+				outTmp <<std::exp( - contr.ED1 / energy.getRT() );
 				break;
 
 			case Pu2:
-				out <<std::exp( - contr.ED2 / energy.getRT() );
+				outTmp <<std::exp( - contr.ED2 / energy.getRT() );
 				break;
 
 			case E_init:
-				out <<contr.init;
+				outTmp <<contr.init;
 				break;
 
 			case E_loops:
-				out <<contr.loops;
+				outTmp <<contr.loops;
 				break;
 
 			case E_dangleL:
-				out <<contr.dangleLeft;
+				outTmp <<contr.dangleLeft;
 				break;
 
 			case E_dangleR:
-				out <<contr.dangleRight;
+				outTmp <<contr.dangleRight;
 				break;
 
 			case E_endL:
-				out <<contr.endLeft;
+				outTmp <<contr.endLeft;
 				break;
 
 			case E_endR:
-				out <<contr.endRight;
+				outTmp <<contr.endRight;
 				break;
 
 			case E_hybrid:
-				out <<(i.energy - contr.ED1 - contr.ED2);
+				outTmp <<(i.energy - contr.ED1 - contr.ED2);
 				break;
 
 			case E_norm:
-				out <<(i.energy / std::log( energy.size1() * energy.size2() ) );
+				outTmp <<(i.energy / std::log( energy.size1() * energy.size2() ) );
 				break;
 
 			case E_hybridNorm:
-				out <<( (i.energy - contr.ED1 - contr.ED2) / std::log( energy.size1() * energy.size2() ) );
+				outTmp <<( (i.energy - contr.ED1 - contr.ED2) / std::log( energy.size1() * energy.size2() ) );
 				break;
 
 			case seedStart1:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<(i.seed->bp_i.first+1);
+					outTmp <<(i.seed->bp_i.first+1);
 				}
 				break;
 
 			case seedEnd1:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<(i.seed->bp_j.first+1);
+					outTmp <<(i.seed->bp_j.first+1);
 				}
 				break;
 
 			case seedStart2:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<(i.seed->bp_j.second+1);
+					outTmp <<(i.seed->bp_j.second+1);
 				}
 				break;
 
 			case seedEnd2:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<(i.seed->bp_i.second+1);
+					outTmp <<(i.seed->bp_i.second+1);
 				}
 				break;
 
 			case seedE:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<i.seed->energy;
+					outTmp <<i.seed->energy;
 				}
 				break;
 
 			case seedED1:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<energy.getED1( i.seed->bp_i.first, i.seed->bp_j.first );
+					outTmp <<energy.getED1( i.seed->bp_i.first, i.seed->bp_j.first );
 				}
 				break;
 
 			case seedED2:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<energy.getAccessibility2().getAccessibilityOrigin().getED( i.seed->bp_j.second, i.seed->bp_i.second );
+					outTmp <<energy.getAccessibility2().getAccessibilityOrigin().getED( i.seed->bp_j.second, i.seed->bp_i.second );
 				}
 				break;
 
 			case seedPu1:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<std::exp( - energy.getED1( i.seed->bp_i.first, i.seed->bp_j.first ) / energy.getRT() );
+					outTmp <<std::exp( - energy.getED1( i.seed->bp_i.first, i.seed->bp_j.first ) / energy.getRT() );
 				}
 				break;
 
 			case seedPu2:
 				if (i.seed == NULL) {
-					out <<std::numeric_limits<E_type>::signaling_NaN();
+					outTmp <<std::numeric_limits<E_type>::signaling_NaN();
 				} else {
-					out <<std::exp( - energy.getAccessibility2().getAccessibilityOrigin().getED( i.seed->bp_j.second, i.seed->bp_i.second ) / energy.getRT() );
+					outTmp <<std::exp( - energy.getAccessibility2().getAccessibilityOrigin().getED( i.seed->bp_j.second, i.seed->bp_i.second ) / energy.getRT() );
 				}
 				break;
 
 			default : throw std::runtime_error("OutputHandlerCsv::add() : unhandled ColType '"+colType2string[*col]+"'");
 			}
 		}
-		out <<'\n';
-	} // omp critical(intarna_omp_outputStreamUpdate)
+		outTmp <<'\n';
+	#if INTARNA_MULITHREADING
+		#pragma omp critical(intarna_omp_outputStreamUpdate)
+	#endif
+		{
+			out << outTmp.str();
+		} // omp critical(intarna_omp_outputStreamUpdate)
+	}
 
 }
 
